--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -1,10 +1,12 @@
 {
 	"profile": {
-		"greeting": "مرحبًا بك في Original Coast Clothing {{user_first_name}}! انقر على بدء الاستخدام للاستمتاع بتجربة المراسلة التلقائية النموذجية التي نوفرها. وإذا كنت ترغب في إنشاء تجربة مماثلة، فتفضل بزيارة موقع https://fb.me/get-sample-oc على الويب"
+		
+			"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان. ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"		  
 	},
 	"menu": {
+		"branches":"فروع المعمل",
 		"order": "تحديثات الطلبات",
-		"help": "التحدث إلى وكيل",
+		"help": "الشكاوى",
 		"suggestion": "اقتراحات لأطقم ملابس",
 		"shop": "تسوق الآن",
 		"start_over": "البدء من جديد",
@@ -13,7 +15,7 @@
 	"get_started": {
 		"welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
 		"guidance": "يمكنك في أي وقت استخدام القائمة الموجودة أدناه للتنقل خلال الميزات",
-		"help": "بم يمكننا مساعدتك اليوم؟"
+		"help": "بمَ يمكننا مساعدتك اليوم؟"
 	},
 	"leadgen": {
 		"promo": "مرحبًا بك {{userFirstName}}، العثور على أطقم ملابس رائعة أصبح الآن أكثر سهولة وراحة.",
@@ -82,5 +84,10 @@
 	"common": {
 		"yes": "نعم",
 		"no": "رقم"
+	},
+	"branches": {
+		"greeting":"برجاء اختيار الفرع الأقرب لك..",
+		"qanater": "القناطر",
+		"banha": "بنها"
 	}
 }
