--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -1,28 +1,34 @@
 {
 	"profile": {
-		
-			"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان. ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"		  
+		"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
 	},
 	"menu": {
-		"branches":"فروع المعمل",
-		"order": "تحديثات الطلبات",
-		"help": "الشكاوى",
-		"suggestion": "اقتراحات لأطقم ملابس",
-		"shop": "تسوق الآن",
 		"start_over": "البدء من جديد",
-		"product_launch": "menu.product_launch"
+		"branches": "فروع المعمل",
+		"order": "تحديثات الطلبات",
+		"help": "خدمة العملاء",
+		"suggestion": "القائمة",
+		"shop": "تسوق الآن",
+		"Thanks": "لا شكرا",
+		"prices": "اسعار الأشعة والحجز",
+		"resultXray": "نتائج الأشعة",
+		"resultTests": "نتائج التحاليل",
+		"visitDetails": "تفاصيل الزيارة المنزلية",
+		"preparations": "التحضيرات",
+		"contracts": "التعاقدات المتاحة",
+		"radiologyBranches": "فروع الأشعة",
+		"labsBranches": "فروع المعمل",
+		"complaints": "الشكاوى"
 	},
 	"get_started": {
 		"welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
-		"guidance": "يمكنك في أي وقت استخدام القائمة الموجودة أدناه للتنقل خلال الميزات",
-		"help": "بمَ يمكننا مساعدتك اليوم؟"
+		"menu": "يمكنك استخدام القائمة الموجودة أدناه ",
+		"help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
 	},
-	"leadgen": {
-		"promo": "مرحبًا بك {{userFirstName}}، العثور على أطقم ملابس رائعة أصبح الآن أكثر سهولة وراحة.",
-		"title": "قسيمة خصم بقيمة 50%",
-		"subtitle": "إليك قسيمتك",
-		"apply": "تطبيق الخصم",
-		"coupon": "تمت إضافة قسيمتك إلى سلسلة الرسائل هذه، يمكنك الآن إتمام عملية شراء المجموعة الصيفية التي يُطبق عليها الخصم"
+	"insurance_or_contract": {		
+		"title": "هل يوجد تأمين أو تعاقد؟",
+		"yes":"نعم",
+		"no":"لا"
 	},
 	"wholesale_leadgen": {
 		"intro": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، أرى أنك تتطلع للانضمام إلى برنامج الموزعين لدينا",
@@ -31,20 +37,21 @@
 		"lead_qualified": "نشكرك على إظهار اهتمامك بعلامتنا التجارية. سنتابع قريبًا بمزيد من المعلومات",
 		"lead_disqualified": "لا توجد مشكلة ، يمكنك دائمًا شراء الملابس عبر موقعنا على الإنترنت https://www.originalcoastclothing.com/"
 	},
-	"curation": {
-		"prompt": "هل تبحث عن طقم ملابس لنفسك أم لشخص آخر؟",
-		"occasion": "رائع! لنبدأ الاستخدام. أولاً، هل هناك مناسبة تضعها في اعتبارك؟",
-		"price": "ما مقدار المبلغ الذي تريد إنفاقه؟",
-		"me": "لي شخصيًا!",
-		"someone": "لشخص آخر",
-		"work": "العمل",
-		"dinner": "عشاء",
-		"party": "حفلة",
-		"sales": "التحدث مع قسم المبيعات",
-		"shop": "تسوق هذه الإطلالة",
-		"title": "مجموعة صيف 2022",
-		"subtitle": "أطقم ملابس مميزة",
-		"show": "إطلالة أخرى"
+	"names_Radiology": {
+		"message": "اختر الأشعة من القائمة ادناه ",
+		"X-ray": "اشعة سينية",
+		"CT": "اشعة مقطعية",
+		"CT_Coronary": "مقطعية على القلب",
+		"MRI_Heart": "اشعة رنين علي القلب",
+		"Liver_Scan": "مسح ذري علي الكبد"
+	},
+	"prices_Radiology": {
+		"X-ray": "السعر: 25",
+		"CT":"السعر: 50 جنية",
+		"CT_Coronary": "قبل الفحص صيام 6 ساعات + تحليل وظائف كلى + الحضور بالفحوصات السابقة\nالسعر: 4200 جنية",
+		"MRI_Heart": "قبل الفحص يجب عليك عمل تحليل وظائق كلى كرياتين \nالسعر: 5300 جنية",
+		"Liver_Scan": "\nالسعر: 25",
+		"X_ray": "prices_Radiology.X_ray"
 	},
 	"order": {
 		"prompt": "يسعدنا مساعدتك. حدد مما يلي",
@@ -86,7 +93,7 @@
 		"no": "رقم"
 	},
 	"branches": {
-		"greeting":"برجاء اختيار الفرع الأقرب لك..",
+		"greeting": "برجاء اختيار الفرع الأقرب لك..",
 		"qanater": "القناطر",
 		"banha": "بنها"
 	}
