--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -1,19 +1,30 @@
 {
 	"profile": {
-		"greeting": "Welcome to Original Coast Clothing {{user_first_name}}! Click get started to enjoy our sample automated messaging experience. If you want to build a similar one visit https://fb.me/get-sample-oc"
+		"greeting": "Hello {{userFirstName}}. I am the default assistant for CairoScan services."
 	},
 	"menu": {
 		"order": "Order updates",
 		"help": "Talk to an agent",
-		"suggestion": "Outfit suggestions",
+		"suggestion": "Menu",
 		"shop": "Shop now",
+		"Thanks": "Thanks",
 		"start_over": "Start over",
-		"product_launch": "Launch updates"
+		"branches": "فروع المعمل",
+		"prices ": "Prices for X-ray and booking",
+		"resultXray": "X-ray results",
+		"resultTests": "test results",
+		"visitDetails": "details of the home visit",
+		"preparations": "Preparations",
+		"contracts": "available contracts",
+		"complaints": "menu.complaints",
+		"labsBranches": "menu.labsBranches",
+		"radiologyBranches": "menu.radiologyBranches",
+		"prices": "menu.prices"
 	},
 	"get_started": {
-		"welcome": "Hi {{userFirstName}}! Welcome to Original Coast Clothing where you'll find styles for every occasion.",
-		"guidance": "At any time, use the menu below to navigate through the features",
-		"help": "What we can do to help you today?"
+		"welcome": "Hello {{userFirstName}}. I am the default assistant for CairoScan services.",
+		"menu": "يمكنك استخدام القائمة الموجودة أدناه ",
+		"help": " What service do you need assistance with today?"
 	},
 	"leadgen": {
 		"promo": "Hi {{userFirstName}}, finding great outfits is now easier and more convenient.",
@@ -29,21 +40,18 @@
 		"lead_qualified": "Thanks for expresing your interest in our brand. We will follow up shortly with more info",
 		"lead_disqualified": "No problem, you can always buy clothing via our website https://www.originalcoastclothing.com/"
 	},
-	"curation": {
-		"prompt": "Are you looking for an outfit for yourself or someone else?",
-		"occasion": "Great! Let's get started. First, is there an occasion in mind?",
-		"price": "How much are you looking to spend?",
-		"me": "For me!",
-		"someone": "Someone else",
-		"work": "Work",
-		"dinner": "Dinner",
-		"party": "Party",
-		"sales": "Talk to sales",
-		"shop": "Shop this look",
-		"title": "Summer collection 2022",
-		"subtitle": "Featured outfit",
-		"show": "Another look",
-		"productLaunchTitle": "New Product Launches"
+	"names_Radiology": {
+		"message": "اختر من القائمةادناه الأشعة",
+		"X-ray": "اشعة سينية",
+		"CT_Chest": "اشعة مقطعية",
+		"MRI_Heart": "اشعة رنين علي القلب",
+		"Liver_Scan": "مسح ذري علي الكبد"
+	},
+	"prices_Radiology": {
+		"X-ray": "لا يوجد تحضيرات\nالسعر: 25",
+		"CT_Chest": "لا يوجد تحضيرات\nالسعر: 25",
+		"MRI_Heart": "لا يوجد تحضيرات\nالسعر: 25",
+		"Liver_Scan": "لا يوجد تحضيرات\nالسعر: 25"
 	},
 	"order": {
 		"prompt": "We'll be happy to help you. Select from the following",
@@ -85,7 +93,7 @@
 		"no": "no"
 	},
 	"branches": {
-		"greeting":"برجاء اختيار الفرع الأقرب لك..",
+		"greeting": "برجاء اختيار الفرع الأقرب لك..",
 		"qanater": "qanater",
 		"banha": "بنها"
 	}
