--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -1,95 +1,99 @@
 {
-  "profile": {
-    "greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
-  },
-  "menu": {
-    "start_over": "البدء من جديد",
-    "branches": "فروع المعمل",
-    "order": "تحديثات الطلبات",
-    "help": "خدمة العملاء",
-    "suggestion": "القائمة",
-    "shop": "تسوق الآن",
-    "Thanks": "لا شكرا",
-    "prices": "اسعار الأشعة والحجز",
-    "resultXray": "نتائج الأشعة",
-    "resultTests": "نتائج التحاليل",
-    "visitDetails": "تفاصيل الزيارة المنزلية",
-    "preparations": "التحضيرات",
-    "contracts": "التعاقدات المتاحة",
-    "radiologyBranches": "فروع الأشعة",
-    "labsBranches": "فروع المعمل",
-    "complaints": "الشكاوى"
-  },
-  "get_started": {
-    "welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
-    "menu": "يمكنك استخدام القائمة الموجودة أدناه ",
-    "help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
-  },
-  "names_Radiology": {
-    "message": "لمعرفة اسعار الأشعة والحجز\nاختر من القائمة ادناه",
-    "X-ray": "اشعة سينية",
-    "CT": "اشعة مقطعية",
-    "CT_Coronary": "مقطعية على القلب",
-    "MRI_Heart": "اشعة رنين علي القلب",
-    "Liver_Scan": "مسح ذري علي الكبد"
-  },
-  "prices_Radiology": {
-    "X-ray": "السعر: 25",
-    "CT": "السعر: 50 جنية",
-    "CT_Coronary": "قبل الفحص صيام 6 ساعات + تحليل وظائف كلى + الحضور بالفحوصات السابقة\nالسعر: 4200 جنية",
-    "MRI_Heart": "قبل الفحص يجب عليك عمل تحليل وظائق كلى كرياتين \nالسعر: 5300 جنية",
-    "Liver_Scan": "\nالسعر: 25",
-	"visit_branch":" حجز زيارة فى الفرع",
-	"visit_home":" حجز زيارة فى البيت"
-  },
-
-  "order": {
-    "prompt": "يسعدنا مساعدتك. حدد مما يلي",
-    "search": "البحث حسب رقم الطلب",
-    "account": "ربط حسابي",
-    "dialog": "مربع حوار ربط الحساب",
-    "searching": "البحث عن الطلب الأخير...",
-    "number": "بالتأكيد، يُرجى كتابة رقم الطلب",
-    "status": "طلبك في الطريق إليك، من المتوقع أن يصلك خلال 3 أيام."
-  },
-  "care": {
-    "prompt": "لتوصيلك بالفريق المناسب، يُرجى اطلاعي على ما تريده؟",
-    "order": "استفسارات بشأن الطلب",
-    "billing": "مشاكل الفوترة",
-    "other": "أخرى",
-    "appointment": "شكرا لرغبتك في تحديد موعد",
-    "issue": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك في أي أسئلة بشأن {{topic}}.",
-    "default": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك اليوم. كيف يمكنني مساعدتك؟",
-    "style": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا للإجابة عن أي أسئلة لديك بشأن موديلات الصيف التي نقدمها",
-    "end": "هذا أقصى ما يمكن للعرض التجريبي تقديمه. يمكنك الاستفادة من إمكانات منصة Messenger في نشاطك التجاري. يرجى زيارة موقع https://fb.me/get-sample-oc للتعرف على كيفية إنشاء تجربة مماثلة",
-    "help": "المساعدة"
-  },
-  "survey": {
-    "prompt": "مرحبًا، هل تريد الحصول على ملاحظات سريعة بشأن تجربتك الأخيرة مع {{agentFirstName}}",
-    "positive": "نشكرك على ملاحظاتك",
-    "neutral": "نشكرك على الملاحظات، وإذا كان هناك أمر ينبغي علينا تحسينه، فيُرجى عدم التردد في التعليق باستخدام الهاشتاج #اقتراح",
-    "negative": "نشكرك على إخبارنا. يؤسفنا سماع ذلك، إذا كان بوسعنا القيام بشيء لتغيير ما حدث، فيُرجى إعلامنا"
-  },
-  "chat_plugin": {
-    "prompt": "شكرًا لزيارتنا متجرنا ، تأكد من مراجعة جميع الأنماط الرائعة التي لدينا في قسم الصيف."
-  },
-  "fallback": {
-    "any": "عذرًا، ولكن لا يمكنني التعرف على \"{{message}}\".",
-    "attachment": "نشكرك على إرسال هذا المُرفق، يمكننا توصيلك بأحد الوكلاء لمراجعته أو يمكننا البدء من جديد"
-  },
-  "branches": {
-    "greeting": "برجاء اختيار الفرع الأقرب لك..",
-    "qanater": "القناطر",
-    "banha": "بنها"
-  },
-  "common": {
-    "yes": "نعم",
-    "no": "لا",
-	"title":"قم بأختيار نعم أو لا من القائمة أدناه"
-  },
-  "questions": {
-	  "contract": "هل يوجد تأمين أو تعاقد؟",
-    "bookVisit": "هل تريد حجز زيارة فى الفرع؟",
-	"bookHomeVisit":"هل تريد حجز زيارة منزلية؟"
-  }
+	"profile": {
+		"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
+	},
+	"menu": {
+		"start_over": "البدء من جديد",
+		"branches": "فروع المعمل",
+		"order": "تحديثات الطلبات",
+		"help": "خدمة العملاء",
+		"suggestion": "القائمة",
+		"shop": "تسوق الآن",
+		"Thanks": "لا شكرا",
+		"prices": "اسعار الأشعة والحجز",
+		"resultXray": "نتائج الأشعة",
+		"resultTests": "نتائج التحاليل",
+		"visitDetails": "تفاصيل الزيارة المنزلية",
+		"preparations": "التحضيرات",
+		"contracts": "التعاقدات المتاحة",
+		"radiologyBranches": "فروع الأشعة",
+		"labsBranches": "فروع المعمل",
+		"complaints": "الشكاوى",
+		"approvals": "الموافقات",
+		"suggestions": "menu.suggestions"
+	},
+	"get_started": {
+		"welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
+		"menu": "يمكنك استخدام القائمة الموجودة أدناه ",
+		"help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
+	},
+	"names_Radiology": {
+		"message": "لمعرفة اسعار الأشعة والحجز\nاختر من القائمة ادناه",
+		"X-ray": "اشعة سينية",
+		"CT": "اشعة مقطعية",
+		"CT_Coronary": "مقطعية على القلب",
+		"MRI_Heart": "اشعة رنين علي القلب",
+		"Liver_Scan": "مسح ذري علي الكبد"
+	},
+	"prices_Radiology": {
+		"X-ray": "السعر: 25",
+		"CT": "السعر: 50 جنية",
+		"CT_Coronary": "قبل الفحص صيام 6 ساعات + تحليل وظائف كلى + الحضور بالفحوصات السابقة\nالسعر: 4200 جنية",
+		"MRI_Heart": "قبل الفحص يجب عليك عمل تحليل وظائق كلى كرياتين \nالسعر: 5300 جنية",
+		"Liver_Scan": "\nالسعر: 25",
+		"visit_branch": " حجز زيارة فى الفرع",
+		"visit_home": " حجز زيارة فى البيت"
+	},
+	"order": {
+		"prompt": "يسعدنا مساعدتك. حدد مما يلي",
+		"search": "البحث حسب رقم الطلب",
+		"account": "ربط حسابي",
+		"dialog": "مربع حوار ربط الحساب",
+		"searching": "البحث عن الطلب الأخير...",
+		"number": "بالتأكيد، يُرجى كتابة رقم الطلب",
+		"status": "طلبك في الطريق إليك، من المتوقع أن يصلك خلال 3 أيام."
+	},
+	"care": {
+		"prompt": "لتوصيلك بالفريق المناسب، يُرجى اطلاعي على ما تريده؟",
+		"order": "استفسارات بشأن الطلب",
+		"billing": "مشاكل الفوترة",
+		"other": "أخرى",
+		"appointment": "شكرا لرغبتك في تحديد موعد",
+		"issue": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك في أي أسئلة بشأن {{topic}}.",
+		"default": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك اليوم. كيف يمكنني مساعدتك؟",
+		"style": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا للإجابة عن أي أسئلة لديك بشأن موديلات الصيف التي نقدمها",
+		"end": "هذا أقصى ما يمكن للعرض التجريبي تقديمه. يمكنك الاستفادة من إمكانات منصة Messenger في نشاطك التجاري. يرجى زيارة موقع https://fb.me/get-sample-oc للتعرف على كيفية إنشاء تجربة مماثلة",
+		"help": "المساعدة"
+	},
+	"survey": {
+		"prompt": "مرحبًا، هل تريد الحصول على ملاحظات سريعة بشأن تجربتك الأخيرة مع {{agentFirstName}}",
+		"positive": "نشكرك على ملاحظاتك",
+		"neutral": "نشكرك على الملاحظات، وإذا كان هناك أمر ينبغي علينا تحسينه، فيُرجى عدم التردد في التعليق باستخدام الهاشتاج #اقتراح",
+		"negative": "نشكرك على إخبارنا. يؤسفنا سماع ذلك، إذا كان بوسعنا القيام بشيء لتغيير ما حدث، فيُرجى إعلامنا"
+	},
+	"chat_plugin": {
+		"prompt": "شكرًا لزيارتنا متجرنا ، تأكد من مراجعة جميع الأنماط الرائعة التي لدينا في قسم الصيف."
+	},
+	"fallback": {
+		"any": "عذرًا، ولكن لا يمكنني التعرف على \"{{message}}\".",
+		"attachment": "نشكرك على إرسال هذا المُرفق، يمكننا توصيلك بأحد الوكلاء لمراجعته أو يمكننا البدء من جديد"
+	},
+	"branches": {
+		"greeting": "برجاء اختيار الفرع الأقرب لك..",
+		"qanater": "القناطر",
+		"banha": "بنها"
+	},
+	"common": {
+		"yes": "نعم",
+		"no": "لا",
+		"title": "قم بأختيار نعم أو لا من القائمة أدناه"
+	},
+	"questions": {
+		"contract": "هل يوجد تأمين أو تعاقد؟",
+		"bookVisit": "هل تريد حجز زيارة فى الفرع؟",
+		"bookHomeVisit": "هل تريد حجز زيارة منزلية؟"
+	},
+	"customer_service": {
+		"redirection": "تم تحويلك إلى خدمة العملاء برجاء الإنتظار"
+	}
 }
