--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -19,8 +19,7 @@
 		"radiologyBranches": "فروع الأشعة",
 		"labsBranches": "فروع المعمل",
 		"complaints": "الشكاوى",
-		"approvals": "الموافقات",
-		"suggestions": "menu.suggestions"
+		"approvals": "الموافقات"	
 	},
 	"get_started": {
 		"welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
@@ -28,21 +27,25 @@
 		"help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
 	},
 	"names_Radiology": {
-		"message": "لمعرفة اسعار الأشعة والحجز\nاختر من القائمة ادناه",
+		"message": "لمعرفة اسعار الأشعة اوالحجز\nاختر من القائمة ادناه",
 		"X-ray": "اشعة سينية",
 		"CT": "اشعة مقطعية",
 		"CT_Coronary": "مقطعية على القلب",
 		"MRI_Heart": "اشعة رنين علي القلب",
-		"Liver_Scan": "مسح ذري علي الكبد"
+		"PET-CT":"مسح ذري",
+		"Liver_Scan": "مسح ذري علي الكبد",
+		"other":"أشعة اخرى",
+		"prescription":" ارسال روشتة الطبيب"
 	},
 	"prices_Radiology": {
 		"X-ray": "السعر: 25",
 		"CT": "السعر: 50 جنية",
 		"CT_Coronary": "قبل الفحص صيام 6 ساعات + تحليل وظائف كلى + الحضور بالفحوصات السابقة\nالسعر: 4200 جنية",
+		"PET-CT":" السعر: 6000 جنية",
 		"MRI_Heart": "قبل الفحص يجب عليك عمل تحليل وظائق كلى كرياتين \nالسعر: 5300 جنية",
-		"Liver_Scan": "\nالسعر: 25",
+		"Liver_Scan": " الحضور  بالافلام السابقة   +  صيام قبل الفحص ب 6 ساعات \nالسعر: 1120 جنية ",
 		"visit_branch": " حجز زيارة فى الفرع",
-		"visit_home": " حجز زيارة فى البيت"
+		"visit_home": " حجز زيارة فى البيت"		
 	},
 	"order": {
 		"prompt": "يسعدنا مساعدتك. حدد مما يلي",
@@ -86,14 +89,17 @@
 	"common": {
 		"yes": "نعم",
 		"no": "لا",
+		"no_contract":"لا",
 		"title": "قم بأختيار نعم أو لا من القائمة أدناه"
 	},
 	"questions": {
 		"contract": "هل يوجد تأمين أو تعاقد؟",
-		"bookVisit": "هل تريد حجز زيارة فى الفرع؟",
-		"bookHomeVisit": "هل تريد حجز زيارة منزلية؟"
+		"bookVisit": "  حجز زيارة فى الفرع؟",
+		"bookHomeVisit": "  حجز زيارة منزلية؟"
 	},
 	"customer_service": {
-		"redirection": "تم تحويلك إلى خدمة العملاء برجاء الإنتظار"
+		"redirection": "تم تحويلك إلى خدمة العملاء برجاء الإنتظار",
+		"radiology_name":"سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
+		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة"
 	}
 }
