Change all scenarios

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -13,7 +13,7 @@
 		"prices": "اسعار الأشعة والحجز",
 		"resultXray": "نتائج الأشعة",
 		"resultTests": "نتائج التحاليل",
-		"visitDetails": "تفاصيل الزيارة المنزلية",
+		"visitDetails": "الزيارة المنزلية",
 		"preparations": "التحضيرات",
 		"contracts": "التعاقدات المتاحة",
 		"radiologyBranches": "فروع الأشعة",
@@ -98,7 +98,7 @@
 		"bookHomeVisit": "  حجز زيارة منزلية؟"
 	},
 	"customer_service": {
-		"redirection": "تم تحويلك إلى خدمة العملاء برجاء الإنتظار",
+		"redirection": " \n اذا اردت الرجوع الى القائمة اضغط على الزر ادناه. تم تحويلك إلى خدمة العملاء برجاء الإنتظار",
 		"radiology_name":"سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
 		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة"
 	},
@@ -115,9 +115,15 @@
 		"submit":"برجاء كتاية الاسم ورقم التليفون وسيتم تحويلك إلى خدمة العملاء"
 	},
 	"contracts":{
-		"enquire":"برجاء كتاية اسم التعاقد - شركة التأمين"
+		"enquire":"برجاء كتاية اسم التعاقد - شركة التأمين",
+		"suggestion":"هل تقصد {{companyName}}?",
+		"yes":"متاح للرجوع إلى القائمة اضغط على القائمة",
+		"no":"ليس متاح للتأكد سيتم تحويلك إلى خدمة العملاء"
 	},
 	"preparations":{
-		"enquire":"برجاء كتاية اسم الفحص"
+		"enquire":"برجاء كتاية اسم الفحص",
+		"suggestion":"هل تقصد {{prepName}}?",
+		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على القائمة",
+		"check":"برجاء كتابة اسم الفحص بصورة صحيحة"
 	}
 }
