shiftted greeting after customer services waiting

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -98,7 +98,7 @@
 		"bookHomeVisit": "  حجز زيارة منزلية؟"
 	},
 	"customer_service": {
-		"redirection": " \n اذا اردت الرجوع الى القائمة اضغط على الزر ادناه. تم تحويلك إلى خدمة العملاء برجاء الإنتظار",
+		"redirection": "تم تحويلك إلى خدمة العملاء. يرجى الانتظار. إذا كنت ترغب في العودة إلى القائمة، اضغط على الزر أدناه.",
 		"radiology_name":"سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
 		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة"
 	},
