--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -3,7 +3,7 @@
 		"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
 	},
 	"menu": {
-		"start_over": "البدء من جديد",
+		"start_over": "ابدء",
 		"branches": "فروع المعمل",
 		"order": "تحديثات الطلبات",
 		"help": "خدمة العملاء",
