last edit for some bugs

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -3,6 +3,8 @@
 		"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
 	},
 	"menu": {
+		"arabic":"التحدث باللغة العربية",
+		"english": "Speak English",
 		"start_over": "ابدء",
 		"branches": "فروع المعمل",
 		"order": "تحديثات الطلبات",
@@ -100,28 +102,29 @@
 	"customer_service": {
 		"redirection": "تم تحويلك إلى خدمة العملاء. يرجى الانتظار. إذا كنت ترغب في العودة إلى القائمة، اضغط على الزر أدناه.",
 		"radiology_name":"سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
-		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة"
+		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة",
+		"chat":"الرد التلقائي"
 	},
   	"complaints":{
-		"submit":"برجاء كتاية الشكوي الخاصة بك وسيتم تحويلك إلى خدمة العملاء"
+		"submit":"برجاء كتابة الشكوي الخاصة بك وسيتم تحويلك إلى خدمة العملاء"
 	},
 	"radiology_results":{
-		"enquire":"برجاء كتاية الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
+		"enquire":"برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
 	},
 	"test_results":{
-		"enquire":"برجاء كتاية الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
+		"enquire":"برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
 	},
 	"home_visit":{
-		"submit":"برجاء كتاية الاسم ورقم التليفون وسيتم تحويلك إلى خدمة العملاء"
+		"submit":"برجاء كتابة الاسم ورقم التليفون وسيتم تحويلك إلى خدمة العملاء"
 	},
 	"contracts":{
-		"enquire":"برجاء كتاية اسم التعاقد - شركة التأمين",
+		"enquire":"برجاء كتابة اسم التعاقد - شركة التأمين",
 		"suggestion":"هل تقصد {{companyName}}?",
 		"yes":"متاح للرجوع إلى القائمة اضغط على القائمة",
 		"no":"ليس متاح للتأكد سيتم تحويلك إلى خدمة العملاء"
 	},
 	"preparations":{
-		"enquire":"برجاء كتاية اسم الفحص",
+		"enquire":"برجاء كتابة اسم الفحص",
 		"suggestion":"هل تقصد {{prepName}}?",
 		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على القائمة",
 		"check":"برجاء كتابة اسم الفحص بصورة صحيحة"
