some of client's bugs

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -120,13 +120,13 @@
 	"contracts":{
 		"enquire":"برجاء كتابة اسم التعاقد - شركة التأمين",
 		"suggestion":"هل تقصد {{companyName}}?",
-		"yes":"متاح للرجوع إلى القائمة اضغط على القائمة",
-		"no":"ليس متاح للتأكد سيتم تحويلك إلى خدمة العملاء"
+		"yes":"نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
+		"no":"هل تريد كتابة إسم شركة أخرى ؟\n للرجوع إلى القائمة اضغط على الزر ادناه"
 	},
 	"preparations":{
 		"enquire":"برجاء كتابة اسم الفحص",
 		"suggestion":"هل تقصد {{prepName}}?",
-		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على القائمة",
+		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على الزر ادناه",
 		"check":"برجاء كتابة اسم الفحص بصورة صحيحة"
 	}
 }
