writing the flow of Prices

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -30,22 +30,37 @@
 	},
 	"names_Radiology": {
 		"message": "لمعرفة اسعار الأشعة اوالحجز\nاختر من القائمة ادناه",
-		"X-ray": "اشعة سينية",
-		"CT": "اشعة مقطعية",
-		"CT_Coronary": "مقطعية على القلب",
-		"MRI_Heart": "اشعة رنين علي القلب",
-		"PET-CT":"مسح ذري",
-		"Liver_Scan": "مسح ذري علي الكبد",
-		"other":"أشعة اخرى",
-		"prescription":" ارسال روشتة الطبيب"
+		"X-ray1": "أشعة على الرحم والأنابيب بالصبغة",
+		"X-ray2":"أشعة عادية على الركبة",
+		"X-ray3": "أشعة عادية عالفقرات القطنية",
+		"X-ray4": "أشعة عادية على الصدر (وضعين)",
+		"X-ray5": " على جميع الفقرات",
+		"X-ray6": "أشعة عادية على الرسخ",
+		"CR1":"سيفالوميتري",
+		"CR2":"بانوراما على الأسنان",
+		"CT1": "مقطعية عالبطن ثلاثية المراحل",
+		"CT2": "مقطعية عالبطن",
+		"CT3": "مقطعية عالبطن و الحوض",
+		"CT4": "مقطعية عالصدر",		
+		"other":"أشعة اخرى"	,
+		"enquire":"برجاء كتابة اسم الأشعة أو الفحص",
+		"check":"برجاء كتابة الأسم بصورة صحيحة",
+		"suggestion":"هل تقصد {{radiologyName}}؟",
+		"price":"سعر الفحص هو:{{radiologyPrice}} جنية"
 	},
 	"prices_Radiology": {
-		"X-ray": "السعر: 25",
-		"CT": "السعر: 50 جنية",
-		"CT_Coronary": "قبل الفحص صيام 6 ساعات + تحليل وظائف كلى + الحضور بالفحوصات السابقة\nالسعر: 4200 جنية",
-		"PET-CT":" السعر: 6000 جنية",
-		"MRI_Heart": "قبل الفحص يجب عليك عمل تحليل وظائق كلى كرياتين \nالسعر: 5300 جنية",
-		"Liver_Scan": " الحضور  بالافلام السابقة   +  صيام قبل الفحص ب 6 ساعات \nالسعر: 1120 جنية ",
+		"X-ray1": "السعر: 1900 جنية",		
+		"X-ray2": "السعر: 520 جنية",
+		"X-ray3": "السعر: 550 جنية",
+		"X-ray4": "السعر: 600 جنية",
+		"X-ray5": "أشعة عادية على جميع الفقرات معا في فيلم واحد\nالسعر:600 جنية ",
+		"X-ray6": "السعر: 520 جنية",
+		"CR1": "السعر: 350 جنية",		
+		"CR2": "السعر: 390 جنية",		
+		"CT1": "مقطعية عالبطن ثلاثية المراحل\nالسعر:1640 جنية ",		
+		"CT2": "السعر: 1700 جنية",		
+		"CT3": "مقطعية عالبطن و الحوض\nالسعر:2880 جنية ",		
+		"CT4": "السعر: 1540 جنية",		
 		"visit_branch": " حجز زيارة فى الفرع",
 		"visit_home": " حجز زيارة فى البيت"		
 	},
@@ -119,13 +134,13 @@
 	},
 	"contracts":{
 		"enquire":"برجاء كتابة اسم التعاقد - شركة التأمين",
-		"suggestion":"هل تقصد {{companyName}}?",
+		"suggestion":"هل تقصد {{companyName}}؟",
 		"yes":"نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
 		"no":"هل تريد كتابة إسم شركة أخرى ؟\n للرجوع إلى القائمة اضغط على الزر ادناه"
 	},
 	"preparations":{
 		"enquire":"برجاء كتابة اسم الفحص",
-		"suggestion":"هل تقصد {{prepName}}?",
+		"suggestion":"هل تقصد {{prepName}}؟",
 		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على الزر ادناه",
 		"check":"برجاء كتابة اسم الفحص بصورة صحيحة"
 	}
